present/styles.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
*{
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: bold;
    font-size: 4vh;
    color: rgb(0, 0, 0);
    text-shadow:
        -1px -1px 0 white,  
        1px -1px 0 white,
        -1px 1px 0 white,
        1px 1px 0 white;
}

body {
    background-image: url(assets/1.0.png);
    margin: 0;
    background-size: cover; 
    background-position: center center;
    background-attachment: fixed;
    height: 100vh;
    width: 100vw;
    overflow: none;
}

@keyframes rotateToolOnce {
    100% {
      transform: rotate(360deg);
    }
}

.tool {
    height: 15vh;
    width: 15vh;
    margin: 50px;
    background-color: rgba(128, 128, 128, 0.5);
    border: 5px solid white;
    justify-content: center;
    display: flex;
    align-items: center;
    border-radius: 50%;
    background-image: url(assets/scissors.png);
    background-position: center center;
    background-size: cover;
}

.toolbar {
    width: 100%;
    justify-content: space-around;
    display: flex;
    flex-direction: row;
    position: absolute;
    bottom: 0;
}

.transition {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 1;
}

.transition img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    animation: transitionAnimation 2s linear;
}

@keyframes transitionAnimation {
    0% { opacity: 0; }
    25% { opacity: .25; }
    50% { opacity: .5; }
    75% { opacity: .25; }
    100% { opacity: 0; }
}

.textContain {
    margin-top: 10vh;
    display: flex;
    width: 100%;
    justify-content: center;
    position: absolute;
    font-size: 3vh;
}

.text {
    width: 80%;
    display: flex;
    justify-content: center;
    text-align: center;
}

